secondfile/objects/Apttus_Config2__PriceListItem__c.object
<CustomObject>
    <fields>
        <fullName>BEID__c</fullName>
        <description>BEID</description>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Display_Name__c</fullName>
        <label>Bill Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_Id__c</fullName>
        <description>Determinant Set Id
Eg: 00001536</description>
        <label>Determinant Set Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Level_Tier__c</fullName>
        <description>Low Level
Eg: 250001</description>
        <label>Low Level Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBIID__c</fullName>
        <description>PBI Number</description>
        <label>PBIID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>